change navbar font size and make sure the navbar overlaps the content of the hero components

--- a/my-app/src/Styles/navbar.module.css
+++ b/my-app/src/Styles/navbar.module.css
@@ -12,10 +12,11 @@ nav a {
     margin: 0 2rem;
     color: var(--textColor);
     text-decoration: none;
+    font-size: 1.4rem;
 }
 
 nav a:hover {
-    color: var(--secondaryColor);
+    color: var(--goldColor);
 }
 
 .navBtn{
@@ -50,6 +51,7 @@ nav a:hover {
         justify-content: center;
         transform: translateY(-100vh);
         transition: transform 0.3s ease-in;
+        z-index: 1000;
     }
 
     .responsive_nav{
